自機が移動時に進行方向を向く処理・追従カメラの実装

--- a/imgui.ini
+++ b/imgui.ini
@@ -8,3 +8,28 @@ Pos=60,60
 Size=563,128
 Collapsed=0
 
+[Window][Action]
+Pos=60,60
+Size=86,116
+Collapsed=0
+
+[Window][GamePad]
+Pos=60,60
+Size=142,371
+Collapsed=0
+
+[Window][Follow]
+Pos=940,334
+Size=372,83
+Collapsed=0
+
+[Window][Player]
+Pos=12,604
+Size=1251,107
+Collapsed=0
+
+[Window][GameScene]
+Pos=951,169
+Size=330,147
+Collapsed=0
+
